Remove the end </embed> tag

--- a/html/browsers/windows/nested-browsing-contexts/frameElement-01.html
+++ b/html/browsers/windows/nested-browsing-contexts/frameElement-01.html
@@ -37,7 +37,7 @@ function on_load() {
   <iframe id="fr2" src=""></iframe>
   <iframe id="fr3" src="" style="display:none"></iframe>
   <object id="obj" name="win2" type="text/html" data="about:blank"></object>
-  <embed id="emb" name="win3" type="image/svg+xml" src="/images/green.svg"></embed>
+  <embed id="emb" name="win3" type="image/svg+xml" src="/images/green.svg">
   <script src="replace.js?pipe=sub"></script>
   <script>
 
